--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
     "typescript": "^5.1.6"
   }
 }
